--- a/sequence_labelling/config.yaml
+++ b/sequence_labelling/config.yaml
@@ -1,8 +1,10 @@
 PROJECT_NAME : 'bengali-punctuation-training'
 LANG : 'bn'
-RAW_DATA_NAME : 'bengali_raw_text'
-DICT_NAME : 'bengali_dict'
-CLEAN_DATA_NAME : 'bengali_clean'
+RAW_FILE_NAME : 'bn.txt'
+PROCESSED_TSV_FILENAME : 'processed.tsv'
+RAW_DATA_NAME : 'raw_text'
+DICT_NAME : 'dict'
+CLEAN_DATA_NAME : 'clean_text'
 TRAIN_CLEAN_NAME : 'train_clean'
 VALID_CLEAN_NAME : 'valid_clean'
 TEST_CLEAN_NAME : 'test_clean'
@@ -13,9 +15,4 @@ MODEL_NAME : 'checkpoint_best'
 TEST_RESULT_NAME : 'test_classification_report'
 SAMPLE_LEN : 6000
 TEST_AND_VALID_LEN : 500
-RAW_FOLDER : 'gs://punctuation-itn/punctuation_data/bengali/data/raw'
-PROCESSED_FOLDER : 'gs://punctuation-itn/punctuation_data/bengali/data/processed'
-TRAINING_DATA_FOLDER : 'gs://punctuation-itn/punctuation_data/bengali/data/training'
-CHECKPOINTS_FOLDER : 'gs://punctuation-itn/punctuation_data/bengali/checkpoints'
-RAW_FILE_NAME : 'bn.txt'
-PROCESSED_TSV_FILENAME : 'bn_processed.tsv'
+
